# python_template

./: .gitignore  README.md  TEMPLATE.md  pyproject.toml
python_template/: __init__.py  core.py
test/: test_core.py
