[tool.poetry]
name = "pyfizzbuzz"
version = "0.1.0"
description = "Kata FizzBuzz with Python"
authors = ["David Isla <d.isla@ibermatica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
